--- a/Application/Home/View/Fangyuanimg/add.html
+++ b/Application/Home/View/Fangyuanimg/add.html
@@ -10,6 +10,7 @@
 +~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 <block name="css">
 	<link href="__PUBLIC__/lib/webuploader/0.1.5/webuploader.css" rel="stylesheet" type="text/css" />
+	<link href="__PUBLIC__/lib/webuploader/0.1.5/demo.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="__PUBLIC__/lib/layui/css/layui.css"  media="all">
 </block>
 <block name="content">
@@ -17,13 +18,14 @@
 	<div class="page-container">
 			<div class="formControls col-xs-12 col-sm-12">
 				<div class="uploader-list-container">
-					<div class="queueList">
+                    <div id="uploader" class="wu-example">
+					    <div class="queueList">
 						<div id="dndArea" class="placeholder">
 							<div id="filePicker-2"></div>
-							<p>或将照片拖到这里，单次最多可选300张</p>
+							<p></p>
 						</div>
 					</div>
-					<div class="statusBar" style="display:none;">
+					    <div class="statusBar" style="display:none;">
 						<div class="progress"> <span class="text">0%</span> <span class="percentage"></span> </div>
 						<div class="info"></div>
 						<div class="btns">
@@ -31,6 +33,7 @@
 							<div class="uploadBtn">开始上传</div>
 						</div>
 					</div>
+                    </div>
 				</div>
 			</div>
     </div>
@@ -52,7 +55,7 @@
   </div>
 </block>
 <block name="js">
-<script type="text/javascript" src="__PUBLIC__/lib/webuploader/0.1.5/webuploader.min.js"></script> 
+<script type="text/javascript" src="__PUBLIC__/lib/webuploader/0.1.5/webuploader.min.js"></script>
 <script type="text/javascript">
 function article_save(){
 	alert("刷新父级的时候会自动关闭弹层。")
@@ -65,7 +68,7 @@ $(function(){
 		radioClass: 'iradio-blue',
 		increaseArea: '20%'
 	});
-	
+
 	$list = $("#fileList"),
 	$btn = $("#btn-star"),
 	state = "pending",
@@ -74,14 +77,14 @@ $(function(){
 	var uploader = WebUploader.create({
 		auto: false,
 		swf: '__PUBLIC__/lib/webuploader/0.1.5/Uploader.swf',
-	
+
 		// 文件接收服务端。
 		server: '__PUBLIC__/lib/webuploader/0.1.5/server/fileupload.php',
-	
+
 		// 选择文件的按钮。可选。
 		// 内部根据当前运行是创建，可能是input元素，也可能是flash.
 		pick: '#filePicker',
-	
+
 		// 不压缩image, 默认如果是jpeg，文件上传前会压缩一把再上传！
 		resize: false,
 
@@ -103,7 +106,7 @@ $(function(){
 		),
 		$img = $li.find('img');
 		$list.append( $li );
-	
+
 		// 创建缩略图
 		// 如果为非图片文件，可以不用调用此方法。
 		// thumbnailWidth x thumbnailHeight 为 100 x 100
@@ -112,7 +115,7 @@ $(function(){
 				$img.replaceWith('<span>不能预览</span>');
 				return;
 			}
-	
+
 			$img.attr( 'src', src );
 		}, thumbnailWidth, thumbnailHeight );
 	});
@@ -120,7 +123,7 @@ $(function(){
 	uploader.on( 'uploadProgress', function( file, percentage ) {
 		var $li = $( '#'+file.id ),
 			$percent = $li.find('.progress-box .sr-only');
-	
+
 		// 避免重复创建
 		if ( !$percent.length ) {
 			$percent = $('<div class="progress-box"><span class="progress-bar radius"><span class="sr-only" style="width:0%"></span></span></div>').appendTo( $li ).find('.sr-only');
@@ -128,17 +131,17 @@ $(function(){
 		$li.find(".state").text("上传中");
 		$percent.css( 'width', percentage * 100 + '%' );
 	});
-	
+
 	// 文件上传成功，给item添加成功class, 用样式标记上传成功。
 	uploader.on( 'uploadSuccess', function( file ) {
 		$( '#'+file.id ).addClass('upload-state-success').find(".state").text("已上传");
 	});
-	
+
 	// 文件上传失败，显示上传出错。
 	uploader.on( 'uploadError', function( file ) {
 		$( '#'+file.id ).addClass('upload-state-error').find(".state").text("上传出错");
 	});
-	
+
 	// 完成上传完了，成功或者失败，先删除进度条。
 	uploader.on( 'uploadComplete', function( file ) {
 		$( '#'+file.id ).find('.progress-box').fadeOut();
@@ -324,7 +327,7 @@ $(function(){
             chunkSize: 512 * 1024,
             server: '{:U('Home/Fangyuanimg/ajax_upload')}',
             //runtimeOrder: 'flash',
-            
+
             resize: false,
 
             compress: {
@@ -487,7 +490,7 @@ $(function(){
                     $prgress.css('display', 'block');
                 } else if ( cur === 'complete' ) {
                     $li.append( '<span class="success"></span>' );
-                    
+
                     //重新加载父级页面的图片列表
                     parent.reloadparentimg();
                 }
@@ -647,9 +650,9 @@ $(function(){
                 case 'finish':
                     stats = uploader.getStats();
                     if ( stats.successNum ) {
-                        
+
                        // alert( '上传成功' );
-                        
+
                     } else {
                         // 没有成功的图片，重设
                         state = 'done';
@@ -747,25 +750,24 @@ $(function(){
 
 })( jQuery );
 </script>
-	
+
 </block>
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
