--- a/Application/Home/View/Fangyuanimg/add.html
+++ b/Application/Home/View/Fangyuanimg/add.html
@@ -407,9 +407,9 @@ $(function(){
                     '</li>' ),
 
                 $btns = $('<div class="file-panel">' +
-                    '<span class="cancel">删除</span>' +
-                    '<span class="rotateRight">向右旋转</span>' +
-                    '<span class="rotateLeft">向左旋转</span></div>').appendTo( $li ),
+                    '<span class="cancel" style="">删除</span>' +
+                    '' +
+                    '').appendTo( $li ),
                 $prgress = $li.find('p.progress span'),
                 $wrap = $li.find( 'p.imgWrap' ),
                 $info = $('<p class="error"></p>'),
