--- a/Application/Home/View/Order/order.html
+++ b/Application/Home/View/Order/order.html
@@ -227,7 +227,7 @@
 						<td>{$v.order_no}</td>
 						<td>{:getUserNickNameByid($v['user_id'])}</td>
 						<td>{$v.order_money}</td>
-						<td><if condition='$v["order_status"] eq 1'><span class="label radius">已支付</span><else/><span class="label label-success radius">未支付</span></if></td>
+						<td><if condition='$v["order_status"] eq 1'><span class="label  label-success radius">已支付</span><else/><span class="label radius">未支付</span></if></td>
 						<td>{$v.order_time|date='Y-m-d H:i',###}</td>
 						</td>
 					<!--	<td class="td-manage">
