--- a/Application/Home/View/Fangyuan/esfy.html
+++ b/Application/Home/View/Fangyuan/esfy.html
@@ -122,7 +122,7 @@
       </div>
       <div class="layui-input-inline" style="width:100px;margin-left:20px;">
         <select name="yongtu" >
-        <option value="">物业类型</option>
+        <option value="">用途</option>
           <foreach name="yongtu" item="pz">
               <option value="{$pz.lxid}">{$pz.lxming}</option>
           </foreach>
