--- a/Application/Home/View/Order/order.html
+++ b/Application/Home/View/Order/order.html
@@ -215,7 +215,8 @@
 						<th width="150">用户</th>
 						<th width="90">支付金额</th>
 						<th width="100">支付状态</th>
-						<th width="100">时间</th>
+						<th width="100">创建时间</th>
+						<th width="100">支付成功时间</th>
 
 					</tr>
 				</thead>
@@ -229,6 +230,8 @@
 						<td>{$v.order_money}</td>
 						<td><if condition='$v["order_status"] eq 1'><span class="label  label-success radius">已支付</span><else/><span class="label radius">未支付</span></if></td>
 						<td>{$v.order_time|date='Y-m-d H:i',###}</td>
+
+						<td><if condition="$v.pay_time neq 0">{$v.pay_time|date='Y-m-d H:i',###}<else />-</if></td>
 						</td>
 					<!--	<td class="td-manage">
 							<a style="text-decoration:none" onClick="admin_stop(this,'{$v.id}')" href="javascript:;" title="停用"><i class="Hui-iconfont" style="font-size: 20px;">&#xe631;</i></a>
