--- a/Application/Home/View/Ziyuan/addxiaoqu.html
+++ b/Application/Home/View/Ziyuan/addxiaoqu.html
@@ -104,14 +104,14 @@
                 <a class="layui-btn layui-btn-primary" id="cz1">重置</a>
 			</div>-->
 			<br/>
-			<div class="row cl">
+			<!--<div class="row cl">
 				<label class="form-label col-xs-4 col-sm-2">
 					出售均价：
 				</label>
 				<div class="formControls col-xs-8 col-sm-4">
 					<input type="text" class="input-text" value="" placeholder="" id="csjunjia" name="csjunjia">
 				</div>
-			</div>
+			</div>-->
 			<br/>
 			<div class="row cl">
 				<label class="form-label col-xs-4 col-sm-2">
