--- a/Application/Home/View/Order/order.html
+++ b/Application/Home/View/Order/order.html
@@ -179,33 +179,65 @@
 			background-color: rgba(175, 42, 0, 0.52);
 			color: white;
 		}
+		.layui-form-select{
+			width: 88px;
+		}
 	</style>
 	<link rel="stylesheet" href="__PUBLIC__/lib/layui/css/layui.css" media="all">
 </block>
 <block name="content">
-	<nav class="breadcrumb hidden">
-		<i class="Hui-iconfont">&#xe67f;</i>
-		<a href="{:U('Index/welcome')}">首页</a>
-		<span class="c-gray en">&gt;</span> 管理后台
-		<span class="c-gray en">&gt;</span> 账户
-		<span class="c-gray en">&gt;</span> 用户管理
-		<a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" >
-			<i class="Hui-iconfont">&#xe68f;</i>
-		</a>
-	</nav>
 	<div class="page-container">
-		<div class="cl pd-5 bg-1 bk-gray ">
-			<span class="l">
-				<!--<a href="javascript:;" onclick="admin_add('添加用户','{:U('Rbac/addUser')}','800','450')" class="btn btn-primary radius">
+		<form class="layui-form" action="{:U('Order/order')}" method="get" id="form">
+			<div align="center">
+				<div class="layui-inline">
+					<div class="layui-form-pane">
+						<div class="layui-form-item">
+
+						<div class="layui-input-inline">
+							<label class="layui-form-label">支付状态</label>
+							<div class="layui-input-block">
+								<select name="order_status" lay-verify="required" >
+									<option value="1" <if condition="$order_status eq 1">selected</if>>已支付</option>
+									<option value="0" <if condition="$order_status eq 0">selected</if>>未支付</option>
+								</select>
+							</div>
+						</div>
+					</div>
+					</div>
+				</div>
+				<div class="layui-inline">
+					<div class="layui-form-pane">
+						<div class="layui-form-item">
+							<label class="layui-form-label">选择时间</label>
+							<div class="layui-input-inline">
+								<input class="layui-input" placeholder="开始日" id="LAY_demorange_s" name="startTime" value="{$startTime}">
+							</div>
+							<div class="layui-input-inline">
+								<input class="layui-input" placeholder="截止日" id="LAY_demorange_e" name="endTime" value="{$endTime}">
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="layui-inline">
+					<button class="layui-btn layui-btn-radius" lay-submit="" lay-filter="demo1">
+						<i class="Hui-iconfont">&#xe665;</i>查找订单
+					</button>
+				</div>
+				<div>&nbsp;</div>
+			</div>
+		</form>
+		<!--<div class="cl pd-5 bg-1 bk-gray ">
+			&lt;!&ndash;<span class="l">
+				&lt;!&ndash;<a href="javascript:;" onclick="admin_add('添加用户','{:U('Rbac/addUser')}','800','450')" class="btn btn-primary radius">
 					<i class="Hui-iconfont">&#xe600;</i> 添加用户
-				</a>-->
+				</a>&ndash;&gt;
 			</span>
 			<span class="r">
 				<a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" >
 					<i class="Hui-iconfont">&#xe68f;</i>
 				</a>
-			</span>
-		</div>
+			</span>&ndash;&gt;
+		</div>-->
 			<table class="table table-border table-bordered table-bg">
 				<thead>
 					<tr class="text-c">
@@ -248,98 +280,41 @@
 	</div>
 </block>
 <block name="js">
+	<script type="text/javascript" src="__PUBLIC__/lib/layui/layui.js"></script>
+	<script>
+		layui.use(['form','laydate'], function(){
+			var laydate = layui.laydate;
 
-	<script type="text/javascript">
-		/*
-			参数解释：
-			title	标题
-			url		请求的url
-			id		需要操作的数据id
-			w		弹出层宽度（缺省调默认值）
-			h		弹出层高度（缺省调默认值）
-		*/
-		/*管理员-增加*/
-		function admin_add(title,url,w,h){
-			layer_show(title,url,w,h);
-		}
-		/*管理员-删除*/
-		function admin_del(obj,id){
-			layer.confirm('管理员删除须谨慎，确认要删除吗？',function(index){
-				$.ajax({
-					type: 'POST',
-					url: '{:U('Rbac/delUser')}',
-					data: {'id':id},
-					dataType: 'json',
-					success: function(data){
-						$(obj).parents("tr").remove();
-						layer.msg('已删除!',{icon:1,time:1000});
-					},
-					error:function(data) {
-						console.log(data.msg);
-					},
-				});
-			});
-		}
-		/*管理员-编辑*/
-		function admin_edit(title,url,id,w,h){
-			layer_show(title,url,w,h);
-		}
-		/*管理员-停用*/
-		function admin_stop(obj,id){
-			layer.confirm('确认要停用吗？',function(index){
-				//此处请求后台程序，下方是成功后的前台处理……
-				$(obj).parents("tr").find(".td-manage").prepend('<a onClick="admin_start(this,id)" href="javascript:;" title="启用" style="text-decoration:none"><i class="Hui-iconfont">&#xe615;</i></a>');
-				$(obj).parents("tr").find(".td-status").html('<span class="label label-default radius">已禁用</span>');
-				$(obj).remove();
-				layer.msg('已停用!',{icon: 5,time:1000});
-			});
-		}
-		/*管理员-停用*/
-		function admin_stop(obj,id){
-			layer.confirm('确认要停用吗？',function(index){
-				$.ajax({
-					type: 'POST',
-					url: '{:U('User/stopUser')}',
-					data: {'id':id},
-					dataType: 'json',
-					success: function(data){
 
-						$(obj).parents("tr").find(".td-manage").prepend('<a onClick="admin_start(this,{$v.id})" href="javascript:;" title="启用" style="text-decoration:none"><i class="Hui-iconfont">&#xe615;</i></a>');
-						$(obj).parents("tr").find(".td-status").html('<span class="label label-default radius">已禁用</span>');
-						$(obj).remove();
-						layer.msg('已停用!',{icon: 5,time:1000});
-					},
-					error:function(data) {
-						console.log(data.msg);
-					},
+			var start = {
+				format: 'YYYY-MM-DD', //日期格式
+				start:'2014-6-15 23:00:00'
+				,choose: function(datas){
+					end.min = datas; //开始日选好后，重置结束日的最小日期
+					end.start = datas //将结束日的初始值设定为开始日
+				}
+			};
 
-				});
+			var end = {
+				min: laydate.now()
+				,max: '2099-06-16 23:59:59'
+				,istoday: true
+				,choose: function(datas){
+					start.max = datas; //结束日选好后，重置开始日的最大日期
+				}
+			};
 
-			});
-		}
-		/*管理员-启用*/
-		function admin_start(obj,id){
-			layer.confirm('确认要启用吗？',function(index){
-				$.ajax({
-					type: 'POST',
-					url: '{:U('Rbac/startUser')}',
-					data: {'id':id},
-					dataType: 'json',
-					success: function(data){
+			document.getElementById('LAY_demorange_s').onclick = function(){
+				start.elem = this;
+				laydate(start);
+			}
+			document.getElementById('LAY_demorange_e').onclick = function(){
+				end.elem = this
+				laydate(end);
+			}
 
-						$(obj).parents("tr").find(".td-manage").prepend('<a onClick="admin_stop(this,{$v.id})" href="javascript:;" title="停用" style="text-decoration:none"><i class="Hui-iconfont">&#xe631;</i></a>');
-				$(obj).parents("tr").find(".td-status").html('<span class="label label-success radius">已启用</span>');
-				$(obj).remove();
-				layer.msg('已启用!', {icon: 6,time:1000});
-					},
-					error:function(data) {
-						console.log(data.msg);
-					},
 
-				});
-
-			});
-		}
+		});
 	</script>
 </block>
 
