--- a/Application/Home/View/Order/order.html
+++ b/Application/Home/View/Order/order.html
@@ -215,15 +215,15 @@
 							<div class="layui-input-inline">
 								<input class="layui-input" placeholder="截止日" id="LAY_demorange_e" name="endTime" value="{$endTime}">
 							</div>
+							<div class="layui-input-inline">
+								<button class="layui-btn layui-btn-radius" lay-submit="" lay-filter="demo1">
+									<i class="Hui-iconfont">&#xe665;</i>查找订单
+								</button>
+							</div>
 						</div>
 					</div>
 				</div>
-				<div class="layui-inline">
-					<button class="layui-btn layui-btn-radius" lay-submit="" lay-filter="demo1">
-						<i class="Hui-iconfont">&#xe665;</i>查找订单
-					</button>
-				</div>
-				<div>&nbsp;</div>
+				
 			</div>
 		</form>
 		<!--<div class="cl pd-5 bg-1 bk-gray ">
