--- a/Application/Home/View/Fangyuan/addesfy.html
+++ b/Application/Home/View/Fangyuan/addesfy.html
@@ -136,7 +136,7 @@
       </div>
       <div class="layui-form-mid layui-word-aux" style="font-size: 16px">座栋</div>
       <div class="layui-input-inline" style="width: 70px;">
-        <input type="text" name="danyuan" placeholder="" autocomplete="off" class="layui-input" lay-verify="zuodong" id="danyuan">
+        <input type="text" name="danyuan" placeholder="" autocomplete="off" class="layui-input" lay-verify="number" id="danyuan">
       </div>
       <div class="layui-form-mid layui-word-aux" style="font-size: 16px">单元</div>
       <div class="layui-input-inline" style="width: 70px;">
