--- a/Application/Home/View/Fysousuo/index.html
+++ b/Application/Home/View/Fysousuo/index.html
@@ -203,16 +203,14 @@ html,body{
 						<td>{$es.mianji}</td>
 
 						<td>
-                          <if condition="$es['leixing'] eq 2">
+                          <if condition="$es['leixing'] eq 1">
                             {$es.shoujia}万元
-                          <else />
-                            <if condition="$es['zujia']">{$es.zujia}
-                              <foreach name="zujialx" item="v">
-                                <if condition='$es["zujialx"] eq $v["lxid"]'>{$v.lxming}</if>
-                              </foreach>
-                            </if>
                           </if>
-
+                          <if condition="$es['leixing'] eq 2">{$es.zujia}
+                            <foreach name="zujialx" item="v">
+                              <if condition='$es["zujialx"] eq $v["lxid"]'>{$v.lxming}</if>
+                            </foreach>
+                          </if>
 						</td>
 
 						<td>
