--- a/Application/Home/View/Fysousuo/index.html
+++ b/Application/Home/View/Fysousuo/index.html
@@ -203,10 +203,10 @@ html,body{
 						<td>{$es.mianji}</td>
 
 						<td>
-                          <if condition="$es['leixing'] eq 1">
+                          <if condition="$es['leixing'] eq '1'">
                             {$es.shoujia}万元
                           </if>
-                          <if condition="$es['leixing'] eq 2">
+                          <if condition="$es['leixing'] eq '2'">
                             <foreach name="zujialx" item="v">
                               <if condition='$es["zujialx"] eq $v["lxid"]'>{$es.zujia}{$v.lxming}</if>
                             </foreach>
