--- a/Application/Home/View/Fysousuo/index.html
+++ b/Application/Home/View/Fysousuo/index.html
@@ -208,7 +208,7 @@ html,body{
                           </if>
                           <if condition="$es['leixing'] eq '2'">
                             <foreach name="zujialx" item="v">
-                              <if condition='$es["zujialx"] eq $v["lxid"]'>{$es['leixing']}--{$es.zujia}{$v.lxming}</if>
+                              <if condition='$es["zujialx"] eq $v["lxid"]'>{$es.zujia}{$v.lxming}</if>
                             </foreach>
                           </if>
 						</td>
