--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -60,87 +60,12 @@
                                       <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Fangyuan/Esfy')}" data-title="二手房源" href="javascript:;">|&nbsp;房屋信息管理&nbsp;|</li>
                                       <li style="float: left;cursor:pointer" class="tab" data-href="{:U('News/news')}" data-title="新闻管理" href="javascript:;">&nbsp;新闻管理&nbsp;|</li>
                                       <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Eveluate/eveluate')}" data-title="新闻管理" href="javascript:;">&nbsp;房产估计管理&nbsp;|</li>
-                                     <!-- <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Fangyuan/Esfy')}" data-title="二手房源" href="javascript:;">|&nbsp;房屋信息审核&nbsp;|</li>-->
-                                      <!--<li style="float: left;cursor:pointer" class="tab1">&nbsp;一手房源&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab1">&nbsp;地图找房&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab1">&nbsp;资料盘管理&nbsp;|</li><br />
-                                      <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Fangyuan/yaoshi')}" data-title="钥匙管理" href="javascript:;">|&nbsp;钥匙管理&nbsp;|</li><br/>
-                                      <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Fygenjin/all')}" data-title="房源跟进" href="javascript:;">|&nbsp;房源跟进&nbsp;|</li>-->
+
                                   </ul>
                               </div>
                               <div style="clear: both;"></div>     
                         </div>
-                        <!--<div style="width: 100% ; padding: 5px;display: block;margin-bottom: 10px;">
-                              <div style="float: left; width: 100px; padding-left: 40px;"><span>客源</span></div>
-                              <div style="float: left;width: 350px;">
-                                  <ul>
-                                      <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Keyuan1/index')}" data-title="买卖客源" href="javascript:;">|&nbsp;买卖客源&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Keyuan1/index2')}" data-title="租赁客源" href="javascript:;">&nbsp;租赁客源&nbsp;|</li><br />
-                                      &lt;!&ndash;<li style="float: left;cursor:pointer" class="tab1">|&nbsp;定金管理&nbsp;|</li><br />
-                                      <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Keyuan1/kygenjin')}" data-title="客源跟进" href="javascript:;">|&nbsp;客源跟进&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Keyuan1/kydaikan')}" data-title="客源带看" href="javascript:;">&nbsp;客源带看&nbsp;|</li>&ndash;&gt;
-                                  </ul>
-                              </div> 
-                              <div style="clear: both;"></div>     
-                        </div>-->
-                       <!-- <div style="width: 100% ; padding: 5px;display: block;margin-bottom: 10px;">
-                              <div style="float: left; width: 100px; padding-left: 40px;"><span>成交</span></div>
-                              <div style="float: left;width: 350px;">
-                                  <ul>
-                                      <li style="float: left;cursor:pointer" class="tab1">|&nbsp;买卖成交&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab1">&nbsp;租赁成交&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab1">&nbsp;一手成交&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab1">&nbsp;分成明细查询&nbsp;|</li><br/>
-                                      <li style="float: left;cursor:pointer" class="tab1">|&nbsp;金融分成查询&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab1">&nbsp;过户进度查看&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab1">&nbsp;佣金记录查询&nbsp;|</li><br />
-                                      
-                                  </ul>
-                              </div> 
-                              <div style="clear: both;"></div>     
-                        </div>  
-                        <div style="width: 100% ; padding: 5px;display: block;margin-bottom: 10px;">
-                              <div style="float: left; width: 100px; padding-left: 40px;"><span>审批</span></div>
-                              <div style="float: left;width: 350px;">
-                                  <ul>
-                                      <li style="float: left;cursor:pointer" class="tab1">|&nbsp;业务审批&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab1">&nbsp;日报审批&nbsp;|</li>
-                                  </ul>
-                              </div> 
-                              <div style="clear: both;"></div>     
-                        </div> 
-                        <div style="width: 100% ; padding: 5px;display: block;margin-bottom: 10px;">
-                              <div style="float: left; width: 100px; padding-left: 40px;"><span>日志</span></div>
-                              <div style="float: left;width: 350px;">
-                                  <ul>
-                                      <li style="float: left;cursor:pointer" class="tab1">|&nbsp;房源日志&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab1">&nbsp;客源日志&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab1">&nbsp;成交日志&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab1">&nbsp;电话查看日志&nbsp;|</li>
-                                  </ul>
-                              </div> 
-                              <div style="clear: both;"></div>     
-                        </div>
-                        <div style="width: 100% ; padding: 5px;display: block;margin-bottom: 10px;">
-                              <div style="float: left; width: 100px; padding-left: 40px;"><span>外网后台</span></div>
-                              <div style="float: left;width: 350px;">
-                                  <ul>
-                                      <li style="float: left;cursor:pointer" class="tab1">|&nbsp;基础配置&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab1">&nbsp;广告位管理&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab1">&nbsp;招聘信息&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab1">&nbsp;友情链接&nbsp;|</li><br />
-                                      <li style="float: left;cursor:pointer" class="tab1">|&nbsp;房产资讯&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab1">&nbsp;业主自助&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab1">&nbsp;委托信息&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab1">&nbsp;访客档案&nbsp;|</li><br />
-                                      <li style="float: left;cursor:pointer" class="tab1">|&nbsp;访客浏览记录&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab1">&nbsp;带看评价&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab1">&nbsp;网站优化&nbsp;|</li>
-                                  </ul>
-                              </div> 
-                              <div style="clear: both;"></div>     
-                        </div>
-                      <div style="clear: both;"></div>-->
+
                     </div>
                 </div>
             </div>
@@ -169,21 +94,7 @@
                   </div>
               </div>
           </li>
-          <!--<li class="dropdown">
-            <a href="javarcript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
-              <i class="glyphicon glyphicon-stats"></i>&nbsp;数据统计<span class="caret"></span>
-            </a>
 
-            <div class="dropdown-menu1">
-                <i class="glyphicon glyphicon-triangle-top" style="left: 250px;font-size:20px;color: #fff; "></i>
-                <div class="s_nav">
-                    <div style="width: 100%;border-left: 5px solid #009688;padding: 5px;">
-
-                      <div style="clear: both;"></div>
-                    </div>
-                </div>
-            </div>
-          </li>-->
 
         <li class="dropdown">
                 <a href="javarcript:void(0);" class="dropdown-toggle acc" data-toggle="dropdown">
@@ -222,7 +133,7 @@
                               <div style="float: left; width: 100px; padding-left: 50px;"><span>账户</span></div>
                               <div style="float: left;width: 350px;">
                                   <ul>
-                                      <!--<li style="float: left;cursor:pointer" class="tab" data-href="{:U('Rbac/bumen')}" data-title="部门管理" href="javascript:;">|&nbsp;部门管理&nbsp;|</li>-->
+
                                       <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Rbac/role')}" data-title="角色管理" href="javascript:;">&nbsp;角色管理&nbsp;|</li>
                                       <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Rbac/index')}" data-title="用户管理" href="javascript:;">&nbsp;用户管理&nbsp;|</li>
                                   </ul>
@@ -233,18 +144,28 @@
                               <div style="float: left; width: 100px; padding-left: 50px;"><span>资源</span></div>
                               <div style="float: left;width: 350px;">
                                   <ul>
-                                     <!-- <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Ziyuan/xingzhengqu')}" data-title="行政区管理" href="javascript:;">|&nbsp;行政区管理&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Ziyuan/pianqu')}" data-title="片区管理" href="javascript:;">&nbsp;城市管理&nbsp;|</li>
-                                      <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Ziyuan/region')}" data-title="片区管理" href="javascript:;">&nbsp;片区管理&nbsp;|</li>-->
+
                                       <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Ziyuan/xiaoqu')}" data-title="小区管理" href="javascript:;">&nbsp;小区管理&nbsp;|</li>
-                                     <!-- <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Ziyuan/xuequ')}" data-title="学区管理" href="javascript:;">&nbsp;学区管理&nbsp;|</li><br />-->
+
 
                                   </ul>
                               </div> 
                               <div style="clear: both;"></div>     
-                        </div> 
+                        </div>
+                        <div style="width: 100% ; padding: 5px;display: block;margin-bottom: 10px;">
+                            <div style="float: left; width: 100px; padding-left: 50px;"><span>设置</span></div>
+                            <div style="float: left;width: 350px;">
+                                <ul>
 
-                      <div style="clear: both;"></div>
+                                    <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Config/config')}" data-title="设置" href="javascript:;">&nbsp;网站设置&nbsp;|</li>
+
+
+                                </ul>
+                            </div>
+                            <div style="clear: both;"></div>
+                        </div>
+
+                        <div style="clear: both;"></div>
                     </div>
                 </div>
             </div>
