--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -158,7 +158,7 @@
                                 <ul>
 
                                     <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Config/config')}" data-title="设置" href="javascript:;">&nbsp;网站设置&nbsp;|</li>
-
+                                    <li style="float: left;cursor:pointer" class="tab" data-href="{:U('Config/getBanners')}" data-title="网站BANNER图设置" href="javascript:;">&nbsp;网站BANNER图设置&nbsp;|</li>
 
                                 </ul>
                             </div>
