--- a/Application/Home/View/Order/order.html
+++ b/Application/Home/View/Order/order.html
@@ -197,6 +197,7 @@
 							<label class="layui-form-label">支付状态</label>
 							<div class="layui-input-block">
 								<select name="order_status" lay-verify="required" >
+									<option value="3" <if condition="$order_status eq 1">selected</if>>全部</option>
 									<option value="1" <if condition="$order_status eq 1">selected</if>>已支付</option>
 									<option value="0" <if condition="$order_status eq 0">selected</if>>未支付</option>
 								</select>
