--- a/Application/Home/View/Rbac/adduser.html
+++ b/Application/Home/View/Rbac/adduser.html
@@ -19,13 +19,13 @@
 						<span class="c-red">*</span>手机号：
 					</label>
 					<div class="formControls col-xs-8 col-sm-4">
-						<input type="text" class="input-text" value="" placeholder=""  name="dianhua" datatype="s5-16" />
+						<input type="text" class="input-text" value="" placeholder=""  name="dianhua" datatype="s5-16" required/>
 					</div>
 					<label class="form-label col-xs-4 col-sm-2">
 						<span class="c-red">*</span>用户姓名：
 					</label>
 					<div class="formControls col-xs-8 col-sm-4">
-						<input type="text" class="input-text" value="" placeholder=""  name="ygmingcheng">
+						<input type="text" class="input-text" value="" placeholder=""  name="ygmingcheng" required>
 					</div>
 				</div>
 				<br/>
@@ -34,13 +34,13 @@
 						<span class="c-red">*</span>密码：
 					</label>
 					<div class="formControls col-xs-8 col-sm-4">
-						<input type="password" class="input-text" value="" placeholder="" id="password" name="mima">
+						<input type="password" class="input-text" value="" placeholder="" id="password" name="mima" required>
 					</div>
 					<label class="form-label col-xs-4 col-sm-2">
 						<span class="c-red">*</span>所属角色：
 					</label>
 					<div class="formControls col-xs-8 col-sm-4">
-						<select name="role_id[]" class="input-text radius">
+						<select name="role_id[]" class="input-text radius" required>
 							<foreach name='role' item='v'>
 								<option style="display:none">请选择角色</option>
 								<option value="{$v['id']}">{$v.name}({$v.remark})</option>
