--- a/Application/Home/View/Rbac/adduser.html
+++ b/Application/Home/View/Rbac/adduser.html
@@ -42,8 +42,8 @@
 					<div class="formControls col-xs-8 col-sm-4">
 						<select name="role_id[]" class="input-text radius" required>
 							<foreach name='role' item='v'>
-								<option style="display:none">请选择角色</option>
-								<option value="{$v['id']}">{$v.name}({$v.remark})</option>
+								<!--<option style="display:none">请选择角色</option>-->
+								<option value="{$v['id']}" <if condition='$key eq 0'>selected</if>>{$v.name}({$v.remark})</option>
 							</foreach>
 						</select>
 					</div>
